--- a/src/components/AllProducts/style.css
+++ b/src/components/AllProducts/style.css
@@ -1,5 +1,5 @@
 /* loader */
-.men-loader{
+.men-loader {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -8,69 +8,25 @@
 }
 
 
-.all-product-container{
+.all-product-container {
     width: 100%;
     min-height: 100vh;
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     align-items: flex-start;
     background-color: #faf9f8;
     font-family: 'Baloo 2', cursive;
     position: relative;
-    border-top: 1px solid rgb(212,212,212);
-}
-
-.desktop-category-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 20px 20px 10px 20px;
+    border-top: 1px solid rgb(212, 212, 212);
 }
 
 
-.category-options{
-    border: 1px solid rgb(212, 212, 212);
-    width: 180px;
-    margin-bottom: 10px;
-    padding: 5px 0px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    position: relative;
-    z-index: 1;
-    transition: all 0.3s linear;
-    overflow: hidden;
-    background-color: #f8f7fe;
-}
-
-.category-options::before{
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: #E4E4E4;
-    height: 100%;
-    transform: translateX(-102%);
-    transition: all 0.3s linear;
-}
-
-.category-options:hover::before{
-    transform: translateX(0%);
-    z-index: -1;
-}
-
-.men-category-activeclass{
+.men-category-activeclass {
     background-color: #E4E4E4;
 }
 
-.mobile-category-container{
-    display: none;
-}
 
-.men-product-box{
+.men-product-box {
     width: 100%;
     box-sizing: border-box;
     display: grid;
@@ -79,7 +35,7 @@
     border-left: 1px solid rgb(212, 212, 212);
 }
 
-.men-product-image-box{
+.men-product-image-box {
     margin: 10px;
     /* border: 1px solid rgb(212, 212, 212); */
     display: flex;
@@ -88,22 +44,22 @@
     position: relative;
     cursor: pointer;
     overflow: hidden;
-} 
+}
 
- 
-.men-product-image{
+
+.men-product-image {
     width: 100%;
     height: 100%;
     object-fit: contain;
 }
 
-.product-info-box{
+.product-info-box {
     display: flex;
     box-sizing: border-box;
-    justify-content:flex-end;
+    justify-content: flex-end;
     align-items: center;
     flex-direction: column;
-    background-color: rgb(0,0,0,0.8);
+    background-color: rgb(0, 0, 0, 0.8);
     position: absolute;
     bottom: 0%;
     transform: translateY(100%);
@@ -114,11 +70,11 @@
     transition: all 0.2s linear;
 }
 
-.men-product-image-box:hover .product-info-box{
+.men-product-image-box:hover .product-info-box {
     transform: translateY(0%);
 }
 
-.product-name-box > h4{
+.product-name-box>h4 {
     font-family: 'Baloo 2', cursive;
     font-size: 16px;
     font-weight: 400;
@@ -127,7 +83,7 @@
     margin-bottom: 5px;
 }
 
-.product-rating-box{
+.product-rating-box {
     width: 100%;
     display: flex;
     margin-bottom: 7px;
@@ -136,13 +92,13 @@
     align-items: center;
 }
 
-.product-rating{
+.product-rating {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.product-preview-button{
+.product-preview-button {
     width: 120px;
     padding: 8px 0px;
     border: none;
@@ -155,106 +111,47 @@
 
 
 /* for laptops and pc */
-@media only screen and (max-width:1100px){
-    .men-product-box{
+@media only screen and (max-width:1100px) {
+    .men-product-box {
         grid-template-columns: 1fr 1fr 1fr;
-    }    
-}  
+    }
+}
 
 
 
 /* for laptops and pc */
-@media only screen and (max-width:890px){
-    .product-name-box > h4{
+@media only screen and (max-width:890px) {
+    .product-name-box>h4 {
         font-size: 14px;
         line-height: 16px;
     }
 
-    .product-rating-box{
+    .product-rating-box {
         font-size: 14px;
     }
 
-    .product-preview-button{
+    .product-preview-button {
         width: 100px;
         padding: 5px 0px;
         font-size: 14px;
     }
-}   
+}
 
 
 /* for tablets  */
-@media only screen and (max-width:768px){
-    .men-product-box{
+@media only screen and (max-width:768px) {
+    .men-product-box {
         grid-template-columns: 1fr 1fr 1fr;
         padding: 5px;
     }
 
-    .all-product-container{
+    .all-product-container {
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
     }
 
-    .desktop-category-container{
-        display: none;
-    }
-
-    .category-options{
-        width: 100%;
-    }
-
-    .mobile-category-container{
-        display: block;
-        width: 100%;
-        box-sizing: border-box;
-        font-family: 'Libre Baskerville', serif;
-        position: relative;
-        padding: 0px 10px;
-        box-sizing: border-box;
-        padding-top: 10px;
-    }
-
-    .men-category-button-box{
-        display: flex;
-        height: 50px;
-        border: 1px solid rgb(212, 212, 212);
-    }
-    
-    .men-category-button{
-        flex: 1;
-        border: none;
-        outline: none;
-        font-size: 18px;
-        background-color: #f8f7fe;
-        font-family: 'Libre Baskerville', serif;
-    }
-
-    .men-category-drop-down{
-        display:flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #f8f7fe;
-    }
-
-    .men-category-mobile-option-box{
-        width: 100%;
-        padding: 10px;
-        position: absolute;
-        z-index: 1;
-        top: 0%;
-        left: -100%;
-        border: 1px solid rgb(212, 212, 212);
-        border-top: none;
-        box-sizing: border-box;
-        background-color: white;
-        transition: all 0.4s;
-    }
-
-    .category-show{
-        left: 0%;
-    }
-
-    .men-category-mobile-option{
+    .men-category-mobile-option {
         border: 1px solid rgb(212, 212, 212);
         height: 50px;
         margin-bottom: 10px;
@@ -264,51 +161,46 @@
         align-items: center;
     }
 
-    .men-category-drop-up{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .men-product-box{
+    .men-product-box {
         border: none;
     }
 
-    .men-product-image-box{
+    .men-product-image-box {
         margin: 5px;
     }
 
-    .product-name-box > h4{
+    .product-name-box>h4 {
         font-size: 15px;
     }
 
-    .product-preview-button{  
+    .product-preview-button {
         padding: 5px 0px;
     }
 }
 
 
-@media only screen and (max-width:550px){
-    .men-product-box{
+@media only screen and (max-width:550px) {
+    .men-product-box {
         grid-template-columns: 1fr 1fr;
     }
 }
 
 
 
-@media only screen and (max-width:300px){
-    .product-info-box{
+@media only screen and (max-width:300px) {
+    .product-info-box {
         padding: 10px;
     }
 
-    .product-name-box > h4{
+    .product-name-box>h4 {
         font-size: 12px;
     }
 
-    .product-rating-box{
+    .product-rating-box {
         font-size: 12px;
     }
-    .product-preview-button{  
+
+    .product-preview-button {
         width: 80px;
         padding: 3px 0px;
         font-size: 13px;
