--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -7,7 +7,9 @@
 }
 
 .category-options {
-    border: 1px solid rgb(212, 212, 212);
+    /* border: 1px solid rgb(212, 212, 212); */
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
     width: 180px;
     margin-bottom: 10px;
     padding: 5px 0px;
@@ -19,7 +21,7 @@
     z-index: 1;
     transition: all 0.3s linear;
     overflow: hidden;
-    background-color: #f8f7fe;
+    background-color: #fff;
 }
 
 .category-options::before {
@@ -66,7 +68,8 @@
     .men-category-button-box {
         display: flex;
         height: 50px;
-        border: 1px solid rgb(212, 212, 212);
+        box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+        border-radius: 4px;
     }
 
     .men-category-button {
@@ -74,15 +77,18 @@
         border: none;
         outline: none;
         font-size: 18px;
-        background-color: #f8f7fe;
+        background-color: #fff;
         font-family: 'Libre Baskerville', serif;
+        border-radius: 4px;
+
     }
 
     .men-category-drop-down {
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #f8f7fe;
+        background-color: #fff;
+        border-radius: 4px;
     }
 
     .men-category-mobile-option-box {
@@ -92,11 +98,12 @@
         z-index: 1;
         top: 0%;
         left: -100%;
-        border: 1px solid rgb(212, 212, 212);
+        /* border: 1px solid rgb(212, 212, 212); */
         border-top: none;
         box-sizing: border-box;
         background-color: white;
         transition: all 0.4s;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     }
 
     .category-show {
@@ -105,7 +112,7 @@
 
     .men-category-drop-up {
         display: flex;
-        justify-content: center;
+        justify-content: flex-end;
         align-items: center;
     }
 }
