--- a/src/components/profile/AddressForm/style.css
+++ b/src/components/profile/AddressForm/style.css
@@ -84,6 +84,7 @@
 
 .address-form-buttons{
     display: flex;
+    margin-top: 10px;
 }
 
 .address-form-buttton{
@@ -93,7 +94,8 @@
     margin-right: 10px;
     margin-top: 10px;
     border:none;
-    background-color: tomato;
+    border-radius: 4px;
+    background-color: #ff0000;
     color: white;
     cursor: pointer;
 }
@@ -113,7 +115,11 @@
     .address-form{
         background-color: white;
         padding: 20px;
-        width: 100%;
+        width: 95%;
+    }
+
+    .address-form-input-field-name {
+        margin: 17px 0px 5px 0px;
     }
 }
 
