--- a/src/authentication/Login/style.css
+++ b/src/authentication/Login/style.css
@@ -1,27 +1,29 @@
 .login-div{
-    /* height: 100vh; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
+    height: 100%;
+    width: 100%;
     /* background-color: #478ccd; */
 }
 
-.login-div > a > h3{
+/* .login-div > a > h3{
     margin-top: 10px;
     font-size: 30px;
     font-family: 'Spectral SC', serif;
-}
+} */
 
 .login-form{
     width: 350px;
     background-color: white;
-    border: 1px solid rgb(167, 164, 164);
+    border-radius: 4px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 10px 30px;
-    margin-top: 30px;
+    /* margin-top: 30px; */
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .login-form > h3{
@@ -45,10 +47,12 @@
 }
 
 .login-form > form > input{
-    padding: 5px;
+    padding: 7px;
     width: 100%;
-    border: 1px solid rgb(199, 194, 194);
+    border: 1px solid rgb(217 216 216);
+    border-radius: 4px;
     outline: none;
+    font-size: 16px;
 }
 
 .login-form > form > button{
@@ -79,13 +83,13 @@
     margin-top: 10px;
 } */
 
-
+@media screen and (max-width:500px) {
+    .login-form{
+        width: 95%;
+    }
+}
 
 @media only screen and (max-width:400px){
-    .login-form{
-        width: 300px;
-    }
-
     .login-form > h3{
         font-size: 20px;
     }
@@ -102,7 +106,6 @@
 
 @media only screen and (max-width:340px){
     .login-form{
-        width: 260px;
         padding: 5px 15px;
     }
 
