--- a/src/components/HomePage/TopTrending/style.css
+++ b/src/components/HomePage/TopTrending/style.css
@@ -1,11 +1,11 @@
-.product-button-container {
+.trending-button-container {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
 }
 
-.product-button {
+.trending-toggle-button {
     width: 160px;
     padding: 6px;
     font-size: 16px;
@@ -15,38 +15,39 @@
     background-color: #EFEFEF;
 }
 
-.product-button:hover {
+.trending-toggle-button:hover {
     color: white;
     background-color: #030342;
 }
 
-.product-images {
+.trending-product-images {
     width: 250px;
     height: 300px;
     object-fit: cover;
     border: 1px solid #f8f8f8;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     margin-bottom: 20px;
-    border-radius: 5px;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 
 @media screen and (max-width:500px) {
-    .product-images {
+    .trending-product-images {
         width: 190px;
         height: 230px;
     }
 }
 
 @media screen and (max-width:400px) {
-    .product-images {
+    .trending-product-images {
         width: 180px;
         height: 230px;
     }
 }
 
 @media screen and (max-width:385px) {
-    .product-images {
+    .trending-product-images {
         width: 250px;
         height: 300px;
     }
