--- a/src/components/Layout/SidebarLayout/style.css
+++ b/src/components/Layout/SidebarLayout/style.css
@@ -4,6 +4,7 @@
     gap: 10px;
     padding: 8px;
     position: relative;
+    min-height: calc(100vh - 160px);
 }
 
 .filter {
@@ -71,7 +72,7 @@
 .category {
     display: flex;
     flex-direction: column;
-    gap: 4px;
+    gap: 7px;
     margin-top: 10px;
 }
 
@@ -107,7 +108,7 @@
         height: 100%;
         background-color: white;
         margin: 10px 10px 0px 10px;
-        padding: 7px 10px;
+        padding: 10px;
         box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
         border-radius: 5px;
         z-index: 1;
@@ -145,7 +146,11 @@
 
     .filter-close-icon {
         display: block;
-        font-size: 20px;
+        font-size: 22px;
+    }
+
+    .category {
+        gap: 10px;
     }
 }
 
