--- a/src/components/profile/User/style.css
+++ b/src/components/profile/User/style.css
@@ -1,22 +1,22 @@
-.profile-main-box{
+.profile-main-box {
     background-color: white;
     padding-bottom: 10px;
 }
 
-.profile-detail-main-box{
+.profile-detail-main-box {
     margin: 20px 30px;
     display: flex;
     align-items: flex-end;
     /* text-transform: capitalize; */
 }
 
-.profile-picture-box{
+.profile-picture-box {
     width: 140px;
     height: 140px;
     position: relative;
 }
 
-.profile-edit-icon{
+.profile-edit-icon {
     position: absolute;
     right: 59px;
     bottom: 5px;
@@ -25,36 +25,37 @@
     cursor: pointer;
 }
 
-.profile-detail-box{
+.profile-detail-box {
     display: flex;
     flex-direction: column;
     gap: 1px;
     margin-left: 15px;
 }
 
-.profile-name-box{
+.profile-name-box {
     font-weight: 600;
     font-size: 25px;
     text-transform: capitalize;
 }
 
-.profile-user-button{
+.profile-user-button {
     width: 110px;
     height: 27px;
     margin-top: 5px;
     cursor: pointer;
     border: 1px solid #E4E4E4;
+    border-radius: 5px;
 }
 
-.profile-user-button:hover{
-    background-color: rgb(213,212,212);
+.profile-user-button:hover {
+    background-color: rgb(213, 212, 212);
 }
 
-.profile-main-features-box{
+.profile-main-features-box {
     border: 1px solid #E4E4E4;
 }
 
-.profile-main-features-ul{
+.profile-main-features-ul {
     list-style: none;
     display: flex;
     justify-content: center;
@@ -63,17 +64,17 @@
 }
 
 
-.profile-main-features-ul > a >li {
+.profile-main-features-ul>a>li {
     padding: 8px 20px;
     cursor: pointer;
 }
 
-.profile-main-features-ul > a > li:hover{
+.profile-main-features-ul>a>li:hover {
     background-color: #ff0000;
     color: white;
 }
 
-.active-tab{
+.active-tab {
     background-color: #ff0000;
     color: white;
 }
@@ -82,26 +83,26 @@
 
 /* media query */
 
-@media only screen and (max-width: 600px) {   
-    .profile-main-features-ul > a >li {
+@media only screen and (max-width: 600px) {
+    .profile-main-features-ul>a>li {
         font-size: 15px;
     }
 }
 
 @media only screen and (max-width: 700px) {
-    .profile-main-features-ul{
+    .profile-main-features-ul {
         justify-content: left;
         overflow-x: scroll;
         white-space: nowrap;
     }
 
-    .profile-main-features-ul::-webkit-scrollbar{
+    .profile-main-features-ul::-webkit-scrollbar {
         display: none;
     }
 }
 
 @media only screen and (max-width: 500px) {
-        .profile-detail-main-box {
+    .profile-detail-main-box {
         margin: 20px 10px;
         flex-direction: column;
         align-items: flex-start;
@@ -121,12 +122,12 @@
         width: 120px;
         height: 120px;
     }
-    
+
     .profile-name-box {
         font-size: 20px;
     }
 
-    .profile-details{
+    .profile-details {
         font-size: 16px;
     }
 }
