--- a/src/pages/Login/style.css
+++ b/src/pages/Login/style.css
@@ -1,16 +1,10 @@
-.login-div{
+.login-container {
     height: 100%;
     width: 100%;
-    /* background-color: #478ccd; */
 }
 
-/* .login-div > a > h3{
-    margin-top: 10px;
-    font-size: 30px;
-    font-family: 'Spectral SC', serif;
-} */
 
-.login-form{
+.login-form-container {
     width: 350px;
     background-color: white;
     border-radius: 4px;
@@ -18,7 +12,6 @@
     flex-direction: column;
     justify-content: center;
     padding: 10px 30px;
-    /* margin-top: 30px; */
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     position: absolute;
     top: 50%;
@@ -26,36 +19,37 @@
     transform: translate(-50%, -50%);
 }
 
-.login-form > h3{
+.login-form-container>h3 {
     font-size: 25px;
     font-weight: 500;
     text-align: left;
     margin-top: 15px;
 }
 
-.login-form > form{
+.login-form-container>form {
     display: flex;
     flex-direction: column;
     margin: 5px 0px 20px 0px;
     box-sizing: border-box;
 }
 
-.login-form > form > h4{
-    font-weight: 400;
-    margin-bottom: 8px;
+.login-input-container {
     margin-top: 12px;
+    position: relative;
 }
 
-.login-form > form > input{
+.login-input-container>input {
     padding: 7px;
     width: 100%;
     border: 1px solid rgb(217 216 216);
     border-radius: 4px;
     outline: none;
     font-size: 16px;
+    margin-top: 5px;
+    padding-right: 40px;
 }
 
-.login-form > form > button{
+.login-form-container>form>button {
     padding: 10px;
     width: 100%;
     font-size: 18px;
@@ -64,56 +58,52 @@
     border: none;
     border-radius: 3px;
     cursor: pointer;
+    margin-top: 12px;
 }
 
-.login-form > h5{
+.login-form-container>h5 {
     text-align: center;
     margin-bottom: 10px;
     font-weight: 500;
     font-size: 17px;
 }
 
-.login-form > span{
+.login-form-container>span {
     text-align: center;
 }
 
-/* .login-div > a > img{
-    width: 100px;
-    object-fit: contain;
-    margin-top: 10px;
-} */
 
 @media screen and (max-width:500px) {
-    .login-form{
+    .login-form-container {
         width: 95%;
     }
 }
 
-@media only screen and (max-width:400px){
-    .login-form > h3{
+@media only screen and (max-width:400px) {
+    .login-form-container>h3 {
         font-size: 20px;
     }
 
-    .login-form > form > button{
+    .login-form-container>form>button {
         font-size: 15px;
     }
 
-    .login-form > h5{
+    .login-form-container>h5 {
         font-size: 15px;
     }
 }
 
 
-@media only screen and (max-width:340px){
-    .login-form{
+@media only screen and (max-width:340px) {
+    .login-form-container {
         padding: 5px 15px;
     }
 
-    .login-form > h3{
+    .login-form-container>h3 {
         font-size: 18px;
     }
 
-    .login-form > h5{
+    .login-form-container>h5 {
         font-size: 15px;
     }
 }
