--- a/src/components/HomePage/Card/style.css
+++ b/src/components/HomePage/Card/style.css
@@ -1,118 +1,110 @@
-.menwomencard-container{
-    margin-bottom: 30px;
-    display: flex;
+.menwomencard-container {
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.menwomencard-container > h2 {
+  margin-top: 20px;
+  font-weight: 500;
+}
+
+.menwomencard-box {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
+}
+
+.card {
+  width: 45%;
+  height: 400px;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0px 0px 8px 2px rgb(163, 163, 163);
+}
+
+.card > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+  transition: 0.5s ease-in-out;
+}
+
+.card-content {
+  position: absolute;
+  bottom: 5%;
+  overflow: hidden;
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  justify-content: center;
+  opacity: 1;
+  transition: 0.5s ease-in-out;
+}
+
+.card-content.left {
+  left: 5%;
+}
+
+.card-content.right-side {
+  right: 5%;
+}
+
+.card-heading > a > h2 {
+  font-weight: 500;
+  font-size: 25px;
+}
+
+a {
+  color: black;
+}
+
+@media only screen and (max-width: 910px) {
+  .menwomencard-container > h2 {
+    font-size: 25px;
+  }
+
+  .card {
+    height: 320px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .menwomencard-container > h2 {
+    font-size: 20px;
+  }
+
+  .menwomencard-box {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
+    padding: 0px 15px;
+  }
 
-.menwomencard-container > h2{
-    margin-top: 20px;
-    font-weight: 500;
-}
-
-.menwomencard-box{
+  .card {
     width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 20px;
+    height: 370px;
+    margin-bottom: 20px;
+  }
 }
-
-.card{
-    width: 45%;
-    height: 400px;
-    position: relative;
-    overflow: hidden;
-    box-shadow: 0px 0px 8px 2px rgb(163, 163, 163);
-}
-
-.card > img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    overflow: hidden;
-    transition: 0.5s ease-in-out;
-}
-
-.card-content{
-    position: absolute;
-    bottom: 5%;
-    overflow: hidden;
-    display: flex;
-    /* flex-direction: column; */
-    align-items: center;
-    justify-content: center;
-    opacity: 1;
-    transition: 0.5s ease-in-out;
-}
-
-.card-content.left{
-    left: 5%;
-}
-
-.card-content.right{
-    right: 5%;
-}
-
-.card-heading > a > h2{
-    font-weight: 500;
-    font-size: 25px;
-}
-
-
-
-a{
-    color: black;
-}
-
-
-
-@media only screen and (max-width: 910px) {
-    .menwomencard-container > h2{
-        font-size: 25px;
-    }
-
-    .card{
-        height: 320px;
-    }
-}
-
-
-@media only screen and (max-width: 768px) {
-    .menwomencard-container > h2{
-        font-size: 20px;
-    }
-
-    .menwomencard-box{
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 0px 15px;
-    }
-    
-    .card{
-        width: 100%;
-        height: 370px;
-        margin-bottom: 20px;
-    }
-}
-
-
 
 /* media query for mobile */
 @media only screen and (max-width: 500px) {
-    .card{
-        height: 260px;
-    }
+  .card {
+    height: 260px;
+  }
 
-    .card-heading > a > h2{
-        font-size: 20px;
-    }
+  .card-heading > a > h2 {
+    font-size: 20px;
+  }
 }
 
-
-@media only screen and (max-width:350px){
-    .menwomencard-container > h2{
-        font-size: 15px;
-    }
+@media only screen and (max-width: 350px) {
+  .menwomencard-container > h2 {
+    font-size: 15px;
+  }
 }
