--- a/src/components/profile/Address/style.css
+++ b/src/components/profile/Address/style.css
@@ -1,28 +1,31 @@
-.address-main-box {
+.address_container {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.address-not-available {
+.address_not_available_container {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 20px;
 }
 
-.address-icon {
+.address_icon {
   font-size: 40px;
 }
 
-.address-not-available-content {
+.address_not_available_content {
   text-align: center;
   margin-top: 10px;
 }
 
-.address-not-available-content > h3 {
+.address_not_available_content > h3 {
   font-weight: 400;
 }
 
-.address-add-button-1 {
+.address_not_available_btn {
   width: 160px;
   height: 30px;
   font-size: 16px;
@@ -32,22 +35,52 @@
   margin: 10px 0px;
 }
 
-.address-available {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  padding: 5px 5px 0px 5px;
+.address_available_container {
+  padding: 20px;
 }
 
-.address-data-show {
+.address_add_container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 12px;
+}
+
+.address_add_container > h3 {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.address_add_button {
+  width: 160px;
+  height: 30px;
+  font-size: 16px;
+  border: 1px solid #e4e4e4;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.address_add_button:hover {
+  background-color: #ff0000;
+  color: white;
+}
+
+.address_details_container {
+  display: grid;
+  grid-template-columns: 600px 600px;
+  gap: 12px;
+}
+
+.address_details {
   border: 1px solid #d4d4d9;
-  margin: 5px;
   padding: 10px;
   display: flex;
   flex-direction: column;
   border-radius: 5px;
 }
 
-.address-person-name {
+.address_user_name {
   font-size: 20px;
   font-weight: 500;
   text-transform: capitalize;
@@ -75,49 +108,33 @@
   background-color: rgb(213, 212, 212);
 }
 
-.address-add-button-box {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 10px;
-  padding-right: 10px;
-  padding-left: 12px;
-}
-
-.address-add-button-box > h3 {
-  font-size: 20px;
-  font-weight: 500;
-}
-
-.address-add-button-2 {
-  width: 160px;
-  height: 30px;
-  font-size: 16px;
-  border: 1px solid #e4e4e4;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.address-add-button-2:hover {
-  background-color: #ff0000;
-  color: white;
-}
-
 /* media query */
+@media only screen and (max-width: 1400px) {
+  .address_available_container {
+    width: 100%;
+  }
+
+  .address_details_container {
+    grid-template-columns: 1fr 1fr;
+  }
+}
 
 @media only screen and (max-width: 768px) {
-  .address-available {
+  .address_details_container {
     grid-template-columns: 1fr;
   }
 }
 
 @media only screen and (max-width: 500px) {
-  .address-person-name {
+  .address_available_container {
+    padding: 12px;
+  }
+
+  .address_user_name {
     font-size: 17px;
   }
 
-  .address-detail {
+  .address_detail {
     font-size: 15px;
   }
 
@@ -129,17 +146,17 @@
     height: 30px;
   }
 
-  .address-add-button-box > h3 {
+  .address_add_container > h3 {
     font-size: 18px;
   }
 }
 
 @media only screen and (max-width: 360px) {
-  .address-add-button-box > h3 {
+  .address_add_container > h3 {
     font-size: 17px;
   }
 
-  .address-add-button-2 {
+  .address_add_button {
     width: 115px;
     font-size: 15px;
   }
