--- a/src/components/Profile/PlaceOrder/style.css
+++ b/src/components/Profile/PlaceOrder/style.css
@@ -138,7 +138,7 @@
 .placeOrder_delivery_details {
   display: flex;
   align-items: self-start;
-  gap: 12px;
+  gap: 50px;
 }
 
 .placeOrder_payment,
@@ -154,8 +154,41 @@
   /* text-decoration: underline; */
 }
 
-.placeOrder_payment > div > p {
+.placeOrder_item_price_container > p {
   margin-bottom: 12px;
+  text-transform: uppercase;
+}
+
+.placeOrder_item_price {
+  margin: 10px 0px;
+  padding: 10px 0px;
+  border-top: 1px solid #e8e8e1;
+  /* border-bottom: 1px solid #e8e8e1; */
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.placeOrder_item_price > div {
+  display: flex;
+  justify-content: space-between;
+  gap: 12px;
+  align-items: center;
+  color: #5f5f52;
+}
+
+.placeOrder_total_price {
+  display: flex;
+  justify-content: space-between;
+  gap: 12px;
+  align-items: center;
+  background-color: #f4f5f6;
+  border-radius: 6px;
+  padding: 6px 8px;
+}
+
+.placeOrder_total_price > span {
+  font-size: 17px;
 }
 
 .placeOrder_delivery_date {
@@ -212,7 +245,7 @@
 
   .placeOrder_delivery_details {
     flex-direction: column;
-    gap: 20px;
+    gap: 30px;
     margin-bottom: 5px;
   }
 
