--- a/src/components/SearchResults/style.css
+++ b/src/components/SearchResults/style.css
@@ -6,6 +6,11 @@
   width: 100%;
   max-height: 300px;
   overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.searchResult_ul_container::-webkit-scrollbar {
+  display: none;
 }
 
 .searchResult_li {
