--- a/src/components/Profile/AddressForm/style.css
+++ b/src/components/Profile/AddressForm/style.css
@@ -1,56 +1,34 @@
-.address-form-main-box {
+.address-form {
   /* border: 1px solid black; */
-  position: fixed;
+  width: 430px;
+  height: 95%;
+  background-color: white;
+  border-radius: 15px;
+  padding: 20px;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 44px 0px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 5;
+  overflow-y: scroll;
 }
 
-.address-form {
-  background-color: white;
-  padding: 20px;
-  width: 430px;
-  border-radius: 12px;
+.address-form::-webkit-scrollbar {
+  width: 8px;
 }
 
-.address-form-delivery-tag {
-  margin-bottom: 10px;
+.address-form::-webkit-scrollbar-track {
+  /* background: #fff; */
+  background-clip: content-box;
 }
 
-.address-form-delivery-tag > h2 {
-  font-weight: 400;
+.address-form::-webkit-scrollbar-thumb {
+  /* background: #fff; */
+  border-radius: 10px;
+  min-height: 60px;
 }
 
-.address-form-box-part-II {
-  /* display: flex; */
-}
-
-.address-form-input-filed-box {
-  display: flex;
-}
-
-.address-form-input-field-name {
-  font-size: 17px;
-  font-weight: 400;
-  margin: 8px 0px 5px 0px;
-}
-
-.address-form-input {
-  outline: none;
-  width: 100%;
-  height: 30px;
-  font-size: 15px;
-  padding-left: 5px;
-  padding-right: 5px;
-  border: 1px solid #d4d4d9;
+.address-form::-webkit-scrollbar-thumb:hover {
+  background: #000;
 }
 
 .address-form-show-locality-box {
@@ -64,6 +42,7 @@
   height: 200px;
   overflow-y: scroll;
   overflow-x: hidden;
+  z-index: 11;
 }
 
 .address-form-show-locality-box::-webkit-scrollbar {
@@ -106,38 +85,8 @@
 }
 
 @media only screen and (max-width: 500px) {
-  .address-form-main-box {
-    display: block;
-    padding: 0px 0px;
-    overflow-y: scroll;
-  }
-
   .address-form {
-    background-color: white;
-    padding: 20px;
     width: 95%;
-  }
-
-  .address-form-input-field-name {
-    margin: 17px 0px 5px 0px;
-  }
-}
-
-@media only screen and (max-width: 360px) {
-  .address-form {
-    padding: 15px;
-  }
-
-  .address-form-delivery-tag > h2 {
-    font-size: 22px;
-  }
-
-  .address-form-input-field-name {
-    font-size: 16px;
-    margin: 10px 0px 5px 0px;
-  }
-
-  .address-form-input-filed-box {
-    flex-direction: column;
+    padding: 16px;
   }
 }
