--- a/src/components/PlaceOrderProcess/OrderSummary/style.css
+++ b/src/components/PlaceOrderProcess/OrderSummary/style.css
@@ -119,7 +119,7 @@
   justify-content: space-between;
   gap: 12px;
   align-items: center;
-  color: #5f5f52;
+  color: var(--tertiary-color);
 }
 
 .orderSummary_total_price {
@@ -138,7 +138,7 @@
 
 .orderSummary_message {
   font-size: 14px;
-  color: #5f5f52;
+  color: var(--tertiary-color);
   margin-top: 12px;
 }
 
