--- a/src/components/Profile/TrackOrder/style.css
+++ b/src/components/Profile/TrackOrder/style.css
@@ -15,7 +15,7 @@
 .trackOrder_Id {
   font-size: 17px;
   font-weight: 500;
-  color: #888889;
+  color: var(--tertiary-color);
 }
 
 .trackOrder_stepper {
