--- a/src/components/Review/allReviews/style.css
+++ b/src/components/Review/allReviews/style.css
@@ -21,7 +21,7 @@
   font-size: 15px;
   border: none;
   outline: none;
-  background-color: #ff0000;
+  background-color: var(--secondary-color);
   color: white;
   cursor: pointer;
   border-radius: 5px;
